<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/album_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    android:foreground="@drawable/ripple"
    app:cardElevation="@dimen/cardview_default_elevation">

...
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sub_medium_text" />

                    <TextView
                        android:id="@+id/album_media_label"
                        android:layout_width="wrap_content"
                        android:text="@string/media"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sub_medium_text" />

                </LinearLayout>
...
