<?xml version="1.0" encoding="utf-8"?>
<com.alienpants.leafpicrevived2.views.SquareRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/media_card_layout"
    android:layout_width="wrap_content"
    android:foreground="@drawable/ripple"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/photo_preview"
...
