...
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.alienpants.leafpicrevived2.views.themeable.ThemedSettingsTitle
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_grey_200"
                tools:text="title text goes here"/>

...
