...
            android:title="@string/advanced_sharing"
            app:showAsAction="never"
            android:orderInCategory="11" />
    </group>
    <group android:id="@+id/on_internal_storage">
        <item
            android:id="@+id/action_share"
            android:orderInCategory="0"
            android:title="@string/share"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="1"
...
